Configure Rating Calculation Management

--- a/core/src/main/resources/templates/core/sidepanel.html
+++ b/core/src/main/resources/templates/core/sidepanel.html
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#2-2">
+                    <a th:href="@{/management/rating/calculation}">
                         <!--<div class="img_nested_list"><img th:src="@{/img/icon_user.png}"></div>-->
                         <span>[[#{greenCity.sidebar.ratings.calculation.setup}]]</span>
                     </a>
